tests/snapshots/sizes__cell_detail_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ ed┌ data · row 1 of 1 · field 1/1 · JSON ────────────────────────────────┐───┐
│> S│                                                                      │   │
│  F│ ▼ { 3 }                                                              │   │
│  W│   "id": 1                                                            │   │
│  O│   ▼ "meta": { 1 }                                                    │   │
└───│     "k": "v"                                                         │───┘
┌ re│   ▼ "tags": [ 2 ]                                                    │───┐
│dat│     [0]: "a"                                                         │   │
│{"i│     [1]: "b"                                                         │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   tip · JSON cells…as a tree · y yanks the value (or jq path)
