tests/snapshots/sizes__confirm_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  WHERE plan = 'pro'                                                                              │
│  ORDER BY created_at DESC;                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ result · 6 row(s) ───────────────────────────────────────────────────────────────────────────────┐
│id  email                  plan  created_at                                                       │
│1   ada@example.com        pro   2026-01-04 09:12:00+00                                           │
│2   linus@example.com      ┌ confirm ─────────────────────────────────┐                           │
│3   grace@example.com      │Confirm                                   │                           │
│4   alan@example.com       │                                          │                           │
│5   edsger@example.com     │run (DELETE without WHERE) · will wrap in │                           │
│6   katherine@example.com  │transaction                               │                           │
│                           │                                          │                           │
│                           │DELETE FROM orders                        │                           │
│                           │                                          │                           │
│                           └──────────────────────────────────────────┘                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   y run · n / esc cancel
